fixing extra spacing in the logo image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,15 @@ header {
     box-shadow: 0 2px 2px #1976D2;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: end;
 }
 
 header a {
     text-decoration: none;
     color: inherit;
+}
+header img {
+    width: 2em;
 }
 
 #logo{
@@ -94,12 +97,22 @@ nav {
 /*  main Styling  */
 
 main{
-    flex: 1;
+    flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* footer styling */
 footer{
-    background-color:#81C784
+    padding: 10px;
+    background-color:#81C784;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer a{
+    /* display: block; */
 }
 
 
@@ -136,6 +149,20 @@ footer{
         font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
+    }
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+
+
+    footer{
+        background-color:#81C784;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        line-height: 2rem;
     }
     
 
